--- a/main.ipynb
+++ b/main.ipynb
@@ -92,8 +92,10 @@
     "                      num_layers)\n",
     "\n",
     "# initialize the hidden and cell states\n",
-    "initial_states = (torch.zeros(num_layers, batch_size, hidden_size),\n",
-    "                  torch.zeros(num_layers, batch_size, hidden_size))"
+    "initial_states = (\n",
+    "    torch.zeros(num_layers, batch_size, hidden_size),\n",
+    "    torch.zeros(num_layers, batch_size, hidden_size)\n",
+    "    )"
    ]
   },
   {
@@ -101,7 +103,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Discriminator(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_layers):\n",
+    "        super(Discriminator, self).__init__()\n",
+    "\n",
+    "        self.LSTM = nn.LSTM(input_size,\n",
+    "                            hidden_size,\n",
+    "                            num_layers=num_layers,\n",
+    "                            batch_first=True)\n",
+    "        \n",
+    "        self.linear = nn.Linear(hidden_size, 1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x, hidden):\n",
+    "        lstm_out, _ = self.LSTM(x, hidden)\n",
+    "        lstm_out = lstm_out[:, -1, :]\n",
+    "        out = self.linear(lstm_out)\n",
+    "        out = self.sigmoid(out)\n",
+    "        return out\n",
+    "\n",
+    "input_size = 1000  # size of the vocabulary\n",
+    "hidden_size = 256  # size of the hidden layers\n",
+    "num_layers = 4  # The number of LSTM layers\n",
+    "\n",
+    "discriminator = Discriminator(input_size,hidden_size,num_layers)\n",
+    "\n",
+    "discriminator_state = (\n",
+    "    torch.zeros(num_layers, batch_size, hidden_size),\n",
+    "    torch.zeros(num_layers, batch_size, hidden_size)\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
