--- a/main.ipynb
+++ b/main.ipynb
@@ -134,6 +134,32 @@
     "    torch.zeros(num_layers, batch_size, hidden_size)\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loss\n",
+    "criterion = nn.BCELoss()\n",
+    "optimizer_gen = torch.optim.Adam(generator.parameters(), lr=0.001)\n",
+    "optimizer_dis = torch.optim.Adam(discriminator.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trainning loop\n",
+    "n_epochs = 10\n",
+    "batch_size = 32\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    for i, (real_data,) in enumerate(data_loader):\n"
+   ]
   }
  ],
  "metadata": {
