--- a/main.ipynb
+++ b/main.ipynb
@@ -153,12 +153,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Trainning loop\n",
-    "n_epochs = 10\n",
+    "# Training parameters\n",
+    "num_epochs = 100\n",
     "batch_size = 32\n",
     "\n",
-    "for epoch in range(n_epochs):\n",
-    "    for i, (real_data,) in enumerate(data_loader):\n"
+    "# Label smoothing parameters for discriminator training\n",
+    "real_label = 0.9\n",
+    "fake_label = 0.1\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    for i, (real_data,) in enumerate(data_loader): \n",
+    "        \n",
+    "        # real and fake labels for use in the loss\n",
+    "        label_real = torch.full((batch_size,), real_label, dtype=torch.float)\n",
+    "        label_fake = torch.full((batch_size,), fake_label, dtype=torch.float)\n",
+    "\n",
+    "        # Move labels to the same device as the generator and discriminator\n",
+    "        if torch.cuda.is_available():\n",
+    "            label_real = label_real.cuda()\n",
+    "            label_fake = label_fake.cuda()\n",
+    "\n",
+    "        discriminator.zero_grad()\n",
+    "\n",
+    "        output_real = discriminator(real_data).view(-1)\n",
+    "        error_real = criterion(output_real, label_real)\n",
+    "        error_real.backward()\n",
+    "        \n",
+    "        noise = torch.randn(batch_size, input_size)\n",
+    "        fake_data = generator(noise)\n",
+    "        \n",
+    "        output_fake = discriminator(fake_data.detach()).view(-1)\n",
+    "        error_fake = criterion(output_fake, label_fake)\n",
+    "        error_fake.backward()\n",
+    "        \n",
+    "        # Update discriminator\n",
+    "        optimizer_dis.step()\n",
+    "\n",
+    "        generator.zero_grad()\n",
+    "        \n",
+    "        # We want the fake data to be classified as real\n",
+    "        output = discriminator(fake_data).view(-1)\n",
+    "        error_g = criterion(output, label_real)  # Use real labels for the generator loss\n",
+    "        error_g.backward()\n",
+    "        \n",
+    "        # Update generator\n",
+    "        optimizer_gen.step()\n",
+    "\n",
+    "        if i % 50 == 0:\n",
+    "            print('[%d/%d][%d/%d]\\tLoss_D: %.4f\\tLoss_G: %.4f\\tD(x): %.4f\\tD(G(z)): %.4f'\n",
+    "                  % (epoch, num_epochs, i, len(data_loader),\n",
+    "                     error_real.item() + error_fake.item(), error_g.item(),\n",
+    "                     output_real.mean().item(), output_fake.mean().item()))\n"
    ]
   }
  ],
