Updated generator and discriminator models for GAN training

--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,29 +78,12 @@
     "        out = self.linear(last_time_step_out)\n",
     "        out = nn.functional.softmax(out, dim=1)\n",
     "        \n",
-    "        return out, states\n",
-    "\n",
-    "\n",
-    "input_size = 1000  # size of the vocabulary\n",
-    "hidden_size = 256  # size of the hidden layers\n",
-    "output_size = input_size  # output size (typically the vocab size)\n",
-    "num_layers = 4  # The number of LSTM layers\n",
-    "\n",
-    "generator = Generator(input_size, \n",
-    "                      hidden_size, \n",
-    "                      output_size, \n",
-    "                      num_layers)\n",
-    "\n",
-    "# initialize the hidden and cell states\n",
-    "initial_states = (\n",
-    "    torch.zeros(num_layers, batch_size, hidden_size),\n",
-    "    torch.zeros(num_layers, batch_size, hidden_size)\n",
-    "    )"
+    "        return out, states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +104,67 @@
     "        lstm_out = lstm_out[:, -1, :]\n",
     "        out = self.linear(lstm_out)\n",
     "        out = self.sigmoid(out)\n",
-    "        return out\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = 1000  # size of the vocabulary\n",
+    "hidden_size = 256  # size of the hidden layers\n",
+    "output_size = input_size  # output size (typically the vocab size)\n",
+    "num_layers = 4  # The number of LSTM layers\n",
+    "generator = Generator(input_size, \n",
+    "                      hidden_size, \n",
+    "                      output_size, \n",
+    "                      num_layers)\n",
+    "\n",
+    "# initialize the hidden and cell states\n",
+    "initial_states = (\n",
+    "    torch.zeros(num_layers, batch_size, hidden_size),\n",
+    "    torch.zeros(num_layers, batch_size, hidden_size)\n",
+    "    )\n",
+    "\n",
     "\n",
     "input_size = 1000  # size of the vocabulary\n",
     "hidden_size = 256  # size of the hidden layers\n",
     "num_layers = 4  # The number of LSTM layers\n",
+    "discriminator = Discriminator(input_size,\n",
+    "                              hidden_size,\n",
+    "                              num_layers)\n",
     "\n",
-    "discriminator = Discriminator(input_size,hidden_size,num_layers)\n",
-    "\n",
+    "# initialize the hidden and cell states\n",
     "discriminator_state = (\n",
     "    torch.zeros(num_layers, batch_size, hidden_size),\n",
     "    torch.zeros(num_layers, batch_size, hidden_size)\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function for initializing model weights\n",
+    "def weights_init(m):\n",
+    "    classname = m.__class__.__name__\n",
+    "    if classname.find('Linear') != -1:\n",
+    "        nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
+    "    elif classname.find('LSTM') != -1:\n",
+    "        for name, param in m.named_parameters():\n",
+    "            if 'weight_ih' in name:\n",
+    "                nn.init.xavier_uniform_(param.data)\n",
+    "            elif 'weight_hh' in name:\n",
+    "                nn.init.orthogonal_(param.data)\n",
+    "            elif 'bias' in name:\n",
+    "                param.data.fill_(0)\n",
+    "\n",
+    "generator.apply(weights_init)\n",
+    "discriminator.apply(weights_init)\n"
    ]
   },
   {
@@ -164,11 +196,11 @@
     "for epoch in range(num_epochs):\n",
     "    for i, (real_data,) in enumerate(data_loader): \n",
     "        \n",
-    "        # real and fake labels for use in the loss\n",
+    "        \"\"\"real and fake labels for use in the loss\"\"\"\n",
     "        label_real = torch.full((batch_size,), real_label, dtype=torch.float)\n",
     "        label_fake = torch.full((batch_size,), fake_label, dtype=torch.float)\n",
     "\n",
-    "        # Move labels to the same device as the generator and discriminator\n",
+    "        \"\"\"Move labels to the same device as the generator and discriminator\"\"\"\n",
     "        if torch.cuda.is_available():\n",
     "            label_real = label_real.cuda()\n",
     "            label_fake = label_fake.cuda()\n",
@@ -186,17 +218,17 @@
     "        error_fake = criterion(output_fake, label_fake)\n",
     "        error_fake.backward()\n",
     "        \n",
-    "        # Update discriminator\n",
+    "        \"\"\"update discriminator\"\"\"\n",
     "        optimizer_dis.step()\n",
     "\n",
     "        generator.zero_grad()\n",
     "        \n",
-    "        # We want the fake data to be classified as real\n",
+    "        \"\"\"we want the fake data to be classified as real\"\"\"\n",
     "        output = discriminator(fake_data).view(-1)\n",
     "        error_g = criterion(output, label_real)  # Use real labels for the generator loss\n",
     "        error_g.backward()\n",
     "        \n",
-    "        # Update generator\n",
+    "        \"\"\"update generator\"\"\"\n",
     "        optimizer_gen.step()\n",
     "\n",
     "        if i % 50 == 0:\n",
