Update comments to be more descriptive

--- a/main.ipynb
+++ b/main.ipynb
@@ -57,20 +57,20 @@
     "    def __init__(self, input_size, hidden_size, output_size, num_layers):\n",
     "        super(Generator, self).__init__()\n",
     "        \n",
-    "        \"\"\"Define the LSTM layer with the specified number of layers\"\"\"\n",
+    "        \"\"\"define the LSTM layer with the specified number of layers\"\"\"\n",
     "        self.lstm = nn.LSTM(input_size, \n",
     "                            hidden_size, \n",
     "                            num_layers=num_layers, \n",
     "                            batch_first=True)\n",
     "        \n",
-    "        \"\"\"Define the linear layer that will map the hidden state output to the output size (vocab size)\"\"\"\n",
+    "        \"\"\"define the linear layer that will map the hidden state output to the output size (vocab size)\"\"\"\n",
     "        self.linear = nn.Linear(hidden_size, \n",
     "                                output_size)\n",
     "        \n",
     "    def forward(self, x, prev_states):\n",
     "        lstm_out, states = self.lstm(x, prev_states)\n",
     "        \n",
-    "        \"\"\"We take the output of the last LSTM layer for each sequence and pass it through the linear layer\n",
+    "        \"\"\"we take the output of the last LSTM layer for each sequence and pass it through the linear layer\n",
     "        lstm_out is of shape (batch_size, sequence_length, hidden_size) We want to pass the output of the last \n",
     "        time step to the linear layer which is lstm_out[:, -1, :]\"\"\"\n",
     "\n",
