--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = BasqueDataset(\"\")\n",
+    "dataset = BasqueDataset(\"/Users/inigoparra/Desktop/web_text_basque.txt\")\n",
     "data_loader =  DataLoader(dataset, \n",
     "                          batch_size=32, \n",
     "                          shuffle=True)"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,10 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "batch_size = 32\n",
+    "\n",
     "input_size = 1000  # size of the vocabulary\n",
     "hidden_size = 256  # size of the hidden layers\n",
     "output_size = input_size  # output size (typically the vocab size)\n",
@@ -145,9 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Discriminator(\n",
+       "  (LSTM): LSTM(1000, 256, num_layers=4, batch_first=True)\n",
+       "  (linear): Linear(in_features=256, out_features=1, bias=True)\n",
+       "  (sigmoid): Sigmoid()\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Function for initializing model weights\n",
     "def weights_init(m):\n",
@@ -169,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,9 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/inigoparra/Documents/GitHub Repositories/GAN/main.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m fake_label \u001b[39m=\u001b[39m \u001b[39m0.1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_epochs):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i, (real_data,) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(data_loader): \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         \u001b[39m\"\"\"real and fake labels for use in the loss\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         label_real \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfull((batch_size,), real_label, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat)\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 1)"
+     ]
+    }
+   ],
    "source": [
     "# Training parameters\n",
     "num_epochs = 100\n",
