--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,21 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/inigoparra/Documents/GitHub Repositories/GAN/main.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m fake_label \u001b[39m=\u001b[39m \u001b[39m0.1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_epochs):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i, (real_data,) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(data_loader): \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         \u001b[39m\"\"\"real and fake labels for use in the loss\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/inigoparra/Documents/GitHub%20Repositories/GAN/main.ipynb#X11sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         label_real \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfull((batch_size,), real_label, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat)\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 1)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Training parameters\n",
     "num_epochs = 100\n",
@@ -223,7 +211,7 @@
     "fake_label = 0.1\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    for i, (real_data,) in enumerate(data_loader): \n",
+    "    for i, real_data in enumerate(data_loader):\n",
     "        \n",
     "        \"\"\"real and fake labels for use in the loss\"\"\"\n",
     "        label_real = torch.full((batch_size,), real_label, dtype=torch.float)\n",
@@ -236,7 +224,7 @@
     "\n",
     "        discriminator.zero_grad()\n",
     "\n",
-    "        output_real = discriminator(real_data).view(-1)\n",
+    "        output_real = discriminator(real_data, hidden_init).view(-1)\n",
     "        error_real = criterion(output_real, label_real)\n",
     "        error_real.backward()\n",
     "        \n",
